--- a/delivery/views/index.ejs
+++ b/delivery/views/index.ejs
@@ -59,7 +59,10 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/login">Sign in</a>
+              <form action="/logout?_method=DELETE" method="post">
+                <button class="nav-link" type="submit">LogOut</button>
+              </form>
+              <!-- <a class="nav-link" href="/">Logout</a> -->
             </li>
             <li class="nav-item"></li>
           </ul>
@@ -74,7 +77,7 @@
         <div class="row">
           <div class="col-lg-10 mx-auto">
             <h1 class="text-uppercase">
-              <strong>Welcome to your home of meals</strong>
+              <strong>Welcome <%= name %> to your home of meals</strong>
             </h1>
             <hr />
           </div>
