Edited many file
Kugwira ntchito mwakathithi

--- a/delivery/views/index.ejs
+++ b/delivery/views/index.ejs
@@ -59,8 +59,13 @@
               >
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="#">Account</a>
+            </li>
+            <li class="nav-item">
               <form action="/logout?_method=DELETE" method="post">
-                <button class="nav-link" type="submit">LogOut</button>
+                <button class="btn btn-outline-warning" type="submit">
+                  LogOut
+                </button>
               </form>
               <!-- <a class="nav-link" href="/">Logout</a> -->
             </li>
