--- a/delivery/views/login.ejs
+++ b/delivery/views/login.ejs
@@ -21,7 +21,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">TPKf</a>
+        <a class="navbar-brand" href="/">TPKfood</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -33,11 +33,6 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="/">Home</a>
-          </div>
-        </div>
       </div>
     </nav>
     <br /><br /><br />
