--- a/delivery/views/register.ejs
+++ b/delivery/views/register.ejs
@@ -21,7 +21,7 @@
     <!-- NAVIGATION BAR -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">TPKf</a>
+        <a class="navbar-brand" href="/">TPKfood</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -33,11 +33,6 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="/">Home</a>
-          </div>
-        </div>
       </div>
     </nav>
 
@@ -58,30 +53,6 @@
 
       <div class="container my-5">
         <div class="row">
-          <div class="col-md-6">
-            <div class="form-floating mb-3">
-              <input
-                type="text"
-                class="form-control"
-                id="floatingInput"
-                placeholder=""
-              />
-              <label for="firstName">First Name</label>
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="form-floating mb-3">
-              <input
-                type="text"
-                class="form-control"
-                id="floatingInput"
-                placeholder=""
-              />
-              <label for="larstName">Last Name</label>
-            </div>
-          </div>
-        </div>
-        <div class="row">
           <div class="col mb-3">
             <div class="form-floating">
               <input
@@ -91,7 +62,7 @@
                 id="floatingInput"
                 placeholder=""
               />
-              <label for="UserName">User Name</label>
+              <label for="UserName">Full Name</label>
             </div>
           </div>
         </div>
