--- a/delivery/views/index1.ejs
+++ b/delivery/views/index1.ejs
@@ -67,7 +67,9 @@
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" href="#">Be a Rider</a></li>
                 <li>
-                  <a class="dropdown-item" href="#">Add your Restaurant</a>
+                  <a class="dropdown-item" href="/rlogin"
+                    >Add your Restaurant</a
+                  >
                 </li>
                 <li><hr class="dropdown-divider" /></li>
                 <li>
