added push notifications
ndalemba zambiri eeh

--- a/delivery/views/index1.ejs
+++ b/delivery/views/index1.ejs
@@ -65,7 +65,11 @@
                 Partner with us
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Be a Rider</a></li>
+                <li>
+                  <a class="dropdown-item" href="../pages/deliveryagent.html"
+                    >Be a Rider</a
+                  >
+                </li>
                 <li>
                   <a class="dropdown-item" href="/rlogin"
                     >Add your Restaurant</a
