--- a/delivery/assets/css/Checkout2.css
+++ b/delivery/assets/css/Checkout2.css
@@ -89,103 +89,6 @@ h5 {
   letter-spacing: 1px;
 }
 
-/* 
-.form-group {
-  position: relative;
-  margin-bottom: 2rem;
-}
-.form-control-placeholder {
-  position: absolute;
-  top: 6px;
-  padding: 7px 0 0 10px;
-  transition: all 200ms;
-  opacity: 0.5;
-  color: #dae0e5 !important;
-  font-size: 75%;
-}
-.form-control:focus + .form-control-placeholder,
-.form-control:valid + .form-control-placeholder {
-  font-size: 75%;
-  transform: translate3d(0, -100%, 0);
-  opacity: 1;
-  top: 10px;
-}
-.form-control {
-  background: transparent;
-  border: none;
-  border-bottom: 1px solid #fff !important;
-  border-radius: 0;
-  outline: 0;
-}
-.form-control:focus,
-.form-control:after {
-  outline-width: 0;
-  border-bottom: 1px solid #fff !important;
-  background: transparent;
-  box-shadow: none;
-  border-radius: 0;
-  color: #dae0e5;
-  letter-spacing: 1px;
-} */
-
-
-
-
-/* old */
-
-/* 
-.checkoutLayout .right{
-    background-color: #5358B3;
-    border-radius: 20px;
-    padding: 40px;
-    color: #fff;
-}
-.checkoutLayout .right .form{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 20px;
-    border-bottom: 1px solid #7a7fe2;
-    padding-bottom: 20px;
-}
-.checkoutLayout .form h1,
-.checkoutLayout .form .group:nth-child(-n+3){
-    grid-column-start: 1;
-    grid-column-end: 3;
-}
-.checkoutLayout .form input, 
-.checkoutLayout .form select
-{
-    width: 100%;
-    padding: 10px 20px;
-    box-sizing: border-box;
-    border-radius: 20px;
-    margin-top: 10px;
-    border:none;
-    background-color: #6a6fc9;
-    color: #fff;
-}
-.checkoutLayout .right .return .row{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 10px;
-}
-.checkoutLayout .right .return .row div:nth-child(2){
-    font-weight: bold;
-    font-size: x-large;
-}
-.buttonCheckout{
-    width: 100%;
-    height: 40px;
-    border: none;
-    border-radius: 20px;
-    background-color: #49D8B9;
-    margin-top: 20px;
-    font-weight: bold;
-    color: #fff;
-
-
-}*/
 
 .checkoutLayout{
     display: grid;
@@ -217,4 +120,89 @@ h5 {
     font-size: large;
     font-weight: bold;
     text-align: center;
+}
+
+
+/* FOOTER CSS DESIGN */
+.footer{
+  background-color: rgb(39, 36, 36);
+  padding: 70px 0;
+  line-height: 1.5;
+  font-family: 'Poppins', sans-serif;
+}
+
+.footer ul{
+  list-style: none;
+}
+.container{
+  max-width: 1170px;
+  margin: auto;  
+}
+
+.footer .row{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.col-md-3 .col-sm-6{
+  width: 25%;
+  padding: 0 15px;
+}
+
+.footer h4{
+  font-size: 1.3rem;
+  color: #fff;
+  text-transform: capitalize;
+  margin-bottom: 35px;
+  font-weight: 500;
+  position: relative;
+}
+
+.footer h4::before{
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: -10px;
+  background-color: #e91e63;
+  height: 2px;
+  box-sizing: border-box;
+  width: 50px;
+}
+
+.footer ul li:not(:last-child){
+  margin-bottom: 10px;
+}
+
+.footer ul li a{
+  font-size: 16;
+  text-transform: capitalize;
+  color: #d1c5c5;
+  text-decoration: none;
+  font-weight: 300;
+  color: #bbb;
+  display: block;
+}
+
+.footer ul li a:hover{
+  color: white;
+  padding-left: 5px;
+  font-weight: bold;
+}
+
+.footer .social-links a{
+  display: inline-block;
+  height: 40px;
+  width: 40px;
+  background-color: rgb(255, 255,255,0.2);
+  margin:0 10px 10px 0;
+  text-align: center;
+  line-height: 40px;
+  border-radius: 50%;
+  color: #fff;
+  transition: all 0.5s ease;
+}
+
+.footer .social-links a:hover{
+  color: #24262b;
+  background-color: #fff;
 }
