--- a/delivery/views/index1.ejs
+++ b/delivery/views/index1.ejs
@@ -66,9 +66,7 @@
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li>
-                  <a class="dropdown-item" href="../pages/deliveryagent.html"
-                    >Be a Rider</a
-                  >
+                  <a class="dropdown-item" href="/dlogin">Be a Rider</a>
                 </li>
                 <li>
                   <a class="dropdown-item" href="/rlogin"
@@ -97,7 +95,7 @@
         <div class="row">
           <div class="col-lg-10 mx-auto">
             <h1 class="text-uppercase">
-              <strong
+              <strong style="color: rgb(10, 24, 32)"
                 >Welcome!.Restaurant food and takeaway. All Delivered.</strong
               >
             </h1>
