--- a/delivery/views/rlogin.ejs
+++ b/delivery/views/rlogin.ejs
@@ -53,12 +53,19 @@
       <div class="row">
         <div class="col align-self-center">
           <form action="/rlogin" method="post">
+            <% if (messages.error){ %>
+            <div class="alert alert-danger d-grid gap-2 col-md-6 mx-auto">
+              <strong><%= messages.error %></strong>
+            </div>
+            <%}%>
+
             <div class="mb-3">
               <label for="exampleInputEmail1" class="form-label"
                 >Email address</label
               >
               <input
                 type="email"
+                name="email"
                 class="form-control"
                 id="exampleInputEmail1"
                 aria-describedby="emailHelp"
@@ -70,6 +77,7 @@
               >
               <input
                 type="password"
+                name="password"
                 class="form-control"
                 id="exampleInputPassword1"
               />
@@ -83,6 +91,9 @@
               <label class="form-check-label" for="exampleCheck1"
                 >Remember me</label
               >
+            </div>
+            <div class="col">
+              <a href="#" style="float: right">Forgot Password</a>
             </div>
             <button type="submit" class="btn btn-primary">Login</button>
           </form>
