--- a/delivery/views/rsignup.ejs
+++ b/delivery/views/rsignup.ejs
@@ -51,7 +51,13 @@
     <h2>Sign Up for Restaurant</h2>
     <br /><br />
     <div class="container-md mb-3">
-      <form action="/rsignup" class="row g-3">
+      <form id="myForm" action="/rsignup" method="post" class="row g-3">
+        <% if (messages.error){ %>
+        <div class="alert alert-danger d-grid gap-2 col-md-6 mx-auto">
+          <strong><%= messages.error %></strong>
+        </div>
+        <%}%>
+
         <div class="col-md-6">
           <label for="inputEmail4" class="form-label">Email</label>
           <input
@@ -72,10 +78,10 @@
           />
         </div>
         <div class="col-12">
-          <label for="inputAddress" class="form-label">Name</label>
+          <label for="inputAddress" class="form-label">Full Name</label>
           <input
             type="text"
-            name="username"
+            name="name"
             class="form-control"
             id="inputAddress"
             placeholder="name..."
@@ -98,14 +104,25 @@
         </div>
         <div class="col-12">
           <div class="form-check">
-            <input class="form-check-input" type="checkbox" id="gridCheck" />
+            <input
+              class="form-check-input"
+              type="checkbox"
+              id="termsCheckbox"
+            />
             <label class="form-check-label" for="gridCheck">
-              Check me out
+              Agree to terms and conditions.
             </label>
           </div>
         </div>
         <div class="col-12">
-          <button type="submit" class="btn btn-primary">Sign Up</button>
+          <button
+            id="submitButton"
+            type="submit"
+            class="btn btn-primary"
+            disabled
+          >
+            Sign Up
+          </button>
         </div>
       </form>
       <p>Aready have an account <a href="/rlogin">Log In</a></p>
@@ -113,5 +130,27 @@
 
     <!-- bootsrap CDN JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+
+    <script>
+      // script.js
+      window.addEventListener("DOMContentLoaded", function () {
+        const form = document.getElementById("myForm");
+        const termsCheckbox = document.getElementById("termsCheckbox");
+        const submitButton = document.getElementById("submitButton");
+
+        termsCheckbox.addEventListener("change", function () {
+          submitButton.disabled = !this.checked;
+        });
+
+        form.addEventListener("submit", function (event) {
+          if (!termsCheckbox.checked) {
+            alert(
+              "Please agree to the terms and conditions before submitting the form."
+            );
+            event.preventDefault();
+          }
+        });
+      });
+    </script>
   </body>
 </html>
