--- a/delivery/assets/css/Checkout2.css
+++ b/delivery/assets/css/Checkout2.css
@@ -1,94 +1,25 @@
-
 ::-webkit-scrollbar {
   width: 8px;
 }
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #f1f1f1;
+  background: #f1f1f1; 
 }
-
+ 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #888;
+  background: #888; 
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #555;
-}
+  background: #555; 
+} body{background: #f5f5f5}.rounded{border-radius: 1rem}.nav-pills .nav-link{color: #555}.nav-pills .nav-link.active{color: white}input[type="radio"]{margin-right: 5px}.bold{font-weight:bold}
 body {
   font-family: Arial, Helvetica, sans-serif;
   background: #d0d3d6;
   padding: 20px;
 }
-
-.card {
-  background: #000;
-  color: #fff;
-  width: 410px !important;
-}
-.mrow {
-  margin-top: 30px;
-  margin-bottom: 30px;
-}
-img {
-  margin-right: 10px;
-}
-.main span:hover {
-  text-decoration: underline;
-  cursor: pointer;
-}
-.mrow img:hover {
-  border-bottom: 1px solid #fff;
-  cursor: pointer;
-}
-.btn-primary {
-  border: none;
-  border-radius: 30px;
-}
-
-h5 {
-  padding-top: 8px;
-}
-
-.form-group {
-  position: relative;
-  margin-bottom: 2rem;
-}
-.form-control-placeholder {
-  position: absolute;
-  top: 6px;
-  padding: 7px 0 0 10px;
-  transition: all 200ms;
-  opacity: 0.5;
-  color: #dae0e5 !important;
-  font-size: 75%;
-}
-.form-control:focus + .form-control-placeholder,
-.form-control:valid + .form-control-placeholder {
-  font-size: 75%;
-  transform: translate3d(0, -100%, 0);
-  opacity: 1;
-  top: 10px;
-}
-.form-control {
-  background: transparent;
-  border: none;
-  border-bottom: 1px solid #fff !important;
-  border-radius: 0;
-  outline: 0;
-}
-.form-control:focus,
-.form-control:after {
-  outline-width: 0;
-  border-bottom: 1px solid #fff !important;
-  background: transparent;
-  box-shadow: none;
-  border-radius: 0;
-  color: #dae0e5;
-  letter-spacing: 1px;
-}
-
 
 .checkoutLayout{
     display: grid;
