--- a/delivery/views/index1.ejs
+++ b/delivery/views/index1.ejs
@@ -95,8 +95,8 @@
         <div class="row">
           <div class="col-lg-10 mx-auto">
             <h1 class="text-uppercase">
-              <strong style="color: rgb(10, 24, 32)"
-                >Welcome!.Restaurant food and takeaway. All Delivered.</strong
+              <strong style="color: rgb(241, 109, 0)"
+                >Welcome!!! Restaurant food and takeaway, All Delivered.</strong
               >
             </h1>
             <hr />
