--- a/delivery/assets/css/Checkout2.css
+++ b/delivery/assets/css/Checkout2.css
@@ -18,7 +18,7 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
   background: #d0d3d6;
-  padding: 20px;
+  /* padding: 10px; */
 }
 
 .checkoutLayout{
